# ez-studios-core

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  STRUCTURE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
config/: index.css  index.html  project.json  project.yaml
config/vscode/: extensions.json  launch.json  settings.json  tasks.json
content/quests/game-tycoon/: manifest.json
content/quests/guardians-vault/: manifest.json
content/quests/magic-academy/: manifest.json
content/quests/world-builder/: manifest.json
content/seeds/: matrix_dna_seed.json
docs/: EXECUTIVE_SUMMARY.md  README_LEGAL_ACADEMIC.md  anti_patterns_manifesto.md  anti_patterns_manifesto_pt.md  development_protocol_agnostic.md  sovereign_strategy_manifesto.md
docs/academic/: phd_proposal_entropia_zero.md
docs/business/: INVESTOR_PITCH.md  complete_business_plan.md  market_intelligence.md
docs/knowledge_base/: REF_MIRROR_PROTOCOL.md
docs/legal/: corporate_structure_shareholder_agreement.md  information_security_policy.md  minor_protection_framework.md  patent_application_intent_compiler.md
docs/management/: DEVELOPMENT_MC.md  EAP_WBS.md  HANDOFF_MAP.md  INTENT_COMPILER_AUDIT.md  QUANTUM_BRIDGE.md  roadmap_mental_map.md
docs/markdown/: BLUEPRINT_DESENVOLVIMENTO.md  CONTRIBUTING.md  Entropia-Zero-Completo.md  PROJECT_SUMMARY.md  ROBLOX_INTEGRATION.md
docs/operational/: EZ_SYNC_MISSION.md
docs/technical/: engine_optimization_matrix.md  mathematical_formalization.md  web_studio_architecture.md
examples/: example-dungeon.ts  validate-integration.ts
scripts/: README.md  build.sh  debug-fuzzy.ts  dev-all.sh  export-roblox-demo.sh  setup_ez_studios.sh  test-intent-fuzzy.ts  test-intent-polyglot.ts  test-intent.ts  test-mcp-mock.ts  test-mirror-protocol.ts  validate-polyglot-registry.sh  validate-registry.ts
src/: index.css
src/archived/python/: bsp.py  compiler.py  roblox_adapter.py  types.py  wfc.py
src/lua/: RobloxMapaModule.lua  RobloxServerScript.lua
tools/docsync/: .editorconfig  .gitignore  .pre-commit-config.yaml  ANALISE_MERCADO_VIABILIDADE.md  ARCHITECTURE.json  ARCHITECTURE.md  CHANGELOG.md  CODEX_ALIGNMENT.md  CODEX_UTILITY.md  CONTRIBUTING.md  DEPLOYMENT.md  DESCRIPTION.md  DESENVOLVIMENTO.md  Dockerfile  GITHUB_DESCRIPTION.txt  GITHUB_PAGES_SETUP.md  GITHUB_SHORT_DESCRIPTION.txt  GITHUB_TOPICS.txt  LICENSE  MANIFEST.in  QUALITY_ROADMAP.md  QUICKSTART.md  README.md  RELATORIO_CORRECOES_FLAKE8.md  RESUMO.md  SECURITY.md  SESSION.md  TODO.md  Taskfile.yml  VIREON_SESSION_SUMMARY_2025-12-08.md  analise_competitiva_completa.md  checklist.md  cleanup_vireon_repo.ps1  codecov.yml  config.yaml  docsync.yaml  fix_all_repos.ps1  fix_history.ps1  guardrive_sync.yaml  migrate_vireon_rust.ps1  (+19 more)
tools/docsync/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
tools/docsync/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/docsync/.github/workflows/: README.md  ci.yml  sync-symbeon.yml  test.yml
tools/docsync/core/: __init__.py
tools/docsync/docs/: Gemfile  _config.yml  api.md  documentation.md  index.md
tools/docsync/docs/_data/: navigation.yml
tools/docsync/docs/_layouts/: home.html
tools/docsync/docs/pt-br/: CONTRIBUTING.md  README.md
tools/docsync/docsync/: __init__.py
tools/docsync/examples/: doc_processor_example.py  docsync.yaml  generate_esg_report.py  rmarkdown_example.py
tools/docsync/examples/guardrive/templates/: esg_report.md.j2
tools/docsync/examples/notion/: notion_cli.py  notion_sync_example.py  rich_content_example.py  setup_notion.py  test_notion_integration.py
tools/docsync/sh1w4_fix_img/: README.md
tools/docsync/sh1w4_profile/: README.md  generate_biostats.py
tools/docsync/sh1w4_profile/.github/workflows/: update_biostats.yml
tools/docsync/src/: ai_processor.py  monitor.py
tools/docsync/src/docsync/: __init__.py  cli.py  config.py  core.py  exceptions.py  sync_manager.py  utils.py
tools/docsync/src/docsync/config/: template_config.yaml
tools/docsync/src/docsync/core/: __init__.py  base.py  llm.py  sync.py  sync_agent.py  sync_state.py
tools/docsync/src/docsync/integrations/: claude_provider.py  gemini_provider.py  openai_provider.py  paper_converter.py
tools/docsync/src/docsync/integrations/notion/: __init__.py  bridge.py  client.py  config.py  notion_content_types.py  sync_monitor.py  types.py
tools/docsync/src/docsync/integrations/notion/tests/: conftest.py  test_notion.py
tools/docsync/src/docsync/mcp/: server.py
tools/docsync/src/docsync/plugins/: base.py
tools/docsync/src/docsync/plugins/formats/: rmarkdown.py
tools/docsync/src/docsync/templates/: filters.py  orchestrator.py  renderer.py
tools/docsync/src/docsync/templates/guardrive/: esg_report.html.j2  esg_report.html.jinja  esg_report.md.j2  esg_report.md.jinja
tools/docsync/src/docsync/templates/guardrive/sections/: analysis.html.jinja  header.html.jinja  metrics.html.jinja  objectives.html.jinja  recommendations.html.jinja
tools/docsync/src/docsync/templates/system/: base.md.j2
tools/docsync/src/docsync/utils/: __init__.py  config.py  filter_registry.py  filters.py
tools/docsync/templates/api/: api_spec.md
tools/docsync/templates/business/: TEMPLATE_ANALISE_MERCADO.md
tools/docsync/templates/guidelines/: development_guidelines.md
tools/docsync/templates/integration/: integration_spec.md
tools/docsync/templates/project/: project_spec.md
tools/docsync/templates/technical/: technical_spec.md
tools/docsync/tests/: __init__.py  conftest.py  test_ai_integration.py  test_ai_processor.py  test_core.py  test_docsync.py  test_esg_report.py  test_filters.py  test_integration.ps1  test_integration.py  test_mcp_server.py  test_monitor.py  test_orchestrator.py  test_renderer.py  test_sync.py
tools/docsync/tests/integrations/notion/: __init__.py  conftest.py  test_notion_content_types.py  test_notion_integration.py  test_notion_types.py
tools/docsync/tests/performance/: test_benchmarks.py
tools/docsync/tests/unit/: test_core.py
(+42 files in other folders)
