[metadata]
name = docsync
description = Sistema de sincronização bidirecional entre arquivos locais e Notion
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
docsync =
    templates/*.j2
    config/*.yaml

[flake8]
max-line-length = 100
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
asyncio_mode = auto
addopts = --cov=docsync --cov-report=term-missing -v

[coverage:run]
source = src/docsync
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass

